tests/golden/3-basic-and-simple-literals/invalid/common/bad-boolean-literals-3.yini
^ App
shouldSave  = one          # ❌ Numeric value, not a boolean literal
shouldClose = zero         # ❌ Numeric value, not a boolean literal
